--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1 id="winner">Winner Jindabad 🏆<button id="newGame">New Game</button></h1>
+    <h1 id="winner">Winner Jindabad 🏆</h1>
     <h2>Tic Tac Toe</h2>
     <div id="main">
         <div class="boardrow">
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <button id="reset" type="reset">Reset</button>
+    <button id="reset" type="reset">New Game</button>
 
     <script src="script.js"></script>
 </body>
